--- a/references.bib
+++ b/references.bib
@@ -162,16 +162,6 @@ and is in the range of 0.2 to 8 seconds for 16 to 128 trustees.},
 	file = {Snapshot:/home/lorenz/Zotero/storage/UWJD56GS/web3.foundation.html:text/html},
 }
 
-@misc{editor_access_nodate,
-	title = {access control - {Glossary} {\textbar} {CSRC}},
-	url = {https://csrc.nist.gov/glossary/term/access_control},
-	abstract = {CSRC Home Page},
-	language = {EN-US},
-	urldate = {2024-02-21},
-	author = {Editor, CSRC Content},
-	file = {Snapshot:/home/lorenz/Zotero/storage/SLDTPCB6/access_control.html:text/html},
-}
-
 @misc{community_web_2019,
 	title = {Web 2.0: {An} {Introduction}},
 	shorttitle = {Web 2.0},
@@ -239,5 +229,23 @@ regression scheme.},
 	note = {Publication info: Published elsewhere. An extended abstract of this paper appears in ISOC Network and Distributed System Security Symposium (NDSS), February 2006. This is the full version.},
 	keywords = {content distribution network, hash chain, key distribution, Key regression, key rotation, lazy revocation, security proofs.},
 	file = {Full Text PDF:/home/lorenz/Zotero/storage/QIJTHRJ5/Fu et al. - 2005 - Key Regression Enabling Efficient Key Distributio.pdf:application/pdf},
+}
+
+@misc{noauthor_keybase_nodate,
+	title = {Keybase},
+	url = {https://keybase.io/},
+	abstract = {Keybase is for keeping everyone's chats and files safe, from families to communities to companies. MacOS, Windows, Linux, iPhone, and Android.},
+	urldate = {2024-02-26},
+	file = {Snapshot:/home/lorenz/Zotero/storage/G3BRYQKV/keybase.io.html:text/html},
+}
+
+@misc{editor_access_nodate,
+	title = {access control - {Glossary} {\textbar} {CSRC}},
+	url = {https://csrc.nist.gov/glossary/term/access_control},
+	abstract = {CSRC Home Page},
+	language = {EN-US},
+	urldate = {2024-02-21},
+	author = {Editor, CSRC Content},
+	file = {Snapshot:/home/lorenz/Zotero/storage/SLDTPCB6/access_control.html:text/html},
 }
 
