present tense in introduction

--- a/main.tex
+++ b/main.tex
@@ -45,9 +45,9 @@ Additionally, due to the assumption that the service providers are a part of the
 This situation has led to emerging voices questioning who should wield ultimate power over data and how the users' ability to manage their data without relying on third parties can be enhanced \cite{noauthor_w3f_nodate}.
 In essence, this describes the idea of data sovereignty where self-sovereign individuals with the ability to manage their identity and data without trusted intermediates can interact and share data while preserving their privacy \cite{ernstberger_sok_2023}.
 
-In this work, the status quo of access control systems currently used in web-based services will be analyzed while also formulating the key aspects of an access control system.
-After clarifying the shortcomings current practices suffer from, an alternative model based on decentralized technologies will be introduced.
-By the example of the decentralized access control system Droplet, concrete aspects of decentralized access control will be discussed in further detail, concluding with an evaluation of the contributions of decentralized access control to the idea of data sovereignty.
+In this work, the status quo of access control systems currently used in web-based services is analyzed while also formulating the key aspects of an access control system.
+After clarifying the shortcomings current practices suffer from, an alternative model based on decentralized technologies is introduced.
+By the example of the decentralized access control system Droplet, concrete aspects of decentralized access control are discussed in further detail, concluding with an evaluation of the contributions of decentralized access control to the idea of data sovereignty.
 
 \section{Access Control}
 In the context of web services, the term \textit{access control} refers to \enquote{the process of granting or denying specific requests to [\dots] obtain and use information and related information processing services [\dots]} \cite{editor_access_nodate}.
